--- a/styles.css
+++ b/styles.css
@@ -268,28 +268,11 @@ thead {
 
 th {
     background-color: var(--secondary-bg-color);
-    background-image: linear-gradient(90deg, var(--rainbow-1), var(--rainbow-2), var(--rainbow-3), var(--rainbow-4), var(--rainbow-5));
-    background-size: 400% 100%;
-    background-clip: text;
-    -webkit-background-clip: text;
-    color: transparent;
+    color: var(--rainbow-5);
     font-weight: bold;
     padding: 10px 6px;
     text-align: left;
-    border-bottom: 2px solid var(--rainbow-4);
-    animation: rainbow-bg 15s linear infinite;
-}
-
-@keyframes rainbow-bg {
-    0% {
-        background-position: 0% 50%;
-    }
-    50% {
-        background-position: 100% 50%;
-    }
-    100% {
-        background-position: 0% 50%;
-    }
+    border-bottom: 2px solid var(--rainbow-5);
 }
 
 td {
